add localization support for drawer and refactor MainView with BaseAppBar; implement MainDrawer and related widgets

--- a/assets/localization/tr.json
+++ b/assets/localization/tr.json
@@ -1,3 +1,9 @@
 {
-    "appName": "Piksel Tesisat"
+    "appName": "Piksel Tesisat",
+    "drawer": {
+        "home": "Ana Sayfa",
+        "customers": "Müşteriler",
+        "plumbers": "Tesisatçılar",
+        "logout": "Çıkış"
+    }
 }
