feat: add localization support for login view; implement login mixin and update UI components

--- a/assets/localization/tr.json
+++ b/assets/localization/tr.json
@@ -5,5 +5,12 @@
         "customers": "Müşteriler",
         "plumbers": "Tesisatçılar",
         "logout": "Çıkış"
+    },
+    "login": {
+        "login": "Giriş Yap",
+        "email": "E-posta",
+        "password": "Şifre",
+        "forgotPassword": "Şifremi Unuttum",
+        "register": "Kayıt Ol"
     }
 }
