feat: add form validation for login; implement validators for required fields, email format, and password length, and update login view to utilize these validators

--- a/assets/localization/tr.json
+++ b/assets/localization/tr.json
@@ -12,5 +12,10 @@
         "password": "Şifre",
         "forgotPassword": "Şifremi Unuttum",
         "register": "Kayıt Ol"
+    },
+    "validators": {
+        "required": "Bu alan zorunludur",
+        "email": "Geçerli bir e-posta adresi giriniz",
+        "password": "Şifre en az 6 karakter olmalıdır"
     }
 }
