feat: enhance customer management; add localization keys, update customer model with new fields and methods, implement customer service for Firestore integration, and create customer cubit and state for state management

--- a/assets/localization/tr.json
+++ b/assets/localization/tr.json
@@ -17,5 +17,16 @@
         "required": "Bu alan zorunludur",
         "email": "Geçerli bir e-posta adresi giriniz",
         "password": "Şifre en az 6 karakter olmalıdır"
+    },
+    "base": {
+        "save": "Kaydet",
+        "cancel": "İptal",
+        "delete": "Sil",
+        "edit": "Düzenle",
+        "add": "Ekle",
+        "search": "Ara",
+        "noData": "Veri bulunamadı",
+        "loading": "Yükleniyor...",
+        "error": "Bir hata oluştu"
     }
 }
