feat: enhance customer management; add localization for customer fields, implement customer cubit with loading state, create customer list view with Firestore integration, and add customer tile widgets

--- a/assets/localization/tr.json
+++ b/assets/localization/tr.json
@@ -28,5 +28,18 @@
         "noData": "Veri bulunamadı",
         "loading": "Yükleniyor...",
         "error": "Bir hata oluştu"
+    },
+    "customer": {
+        "name": "Ad",
+        "surname": "Soyad",
+        "phone": "Telefon",
+        "address": "Adres",
+        "province": "İl",
+        "district": "İlçe",
+        "newCustomer": "Yeni Müşteri",
+        "editCustomer": "Müşteri Düzenle",
+        "deleteCustomer": "Müşteri Sil",
+        "customerDetail": "Müşteri Detayı",
+        "customerList": "Müşteri Listesi"
     }
 }
