feat: enhance localization and UI for main drawer; add works and reports sections, update customer tile subtitle, and introduce new icons

--- a/assets/localization/tr.json
+++ b/assets/localization/tr.json
@@ -4,6 +4,8 @@
         "home": "Ana Sayfa",
         "customers": "Müşteriler",
         "plumbers": "Tesisatçılar",
+        "works": "İşler",
+        "reports": "Raporlar",
         "logout": "Çıkış"
     },
     "login": {
