feat: implement customer creation form; add custom text and phone fields, district selector, and localization support

--- a/assets/localization/tr.json
+++ b/assets/localization/tr.json
@@ -42,7 +42,8 @@
         "editCustomer": "Müşteri Düzenle",
         "deleteCustomer": "Müşteri Sil",
         "customerDetail": "Müşteri Detayı",
-        "customerList": "Müşteri Listesi"
+        "customerList": "Müşteri Listesi",
+        "customerAdded": "Müşteri eklendi"
     },
     "plumber": {
         "name": "Ad",
