--- a/assets/localization/tr.json
+++ b/assets/localization/tr.json
@@ -57,5 +57,11 @@
         "deletePlumber": "Tesisatçı Sil",
         "plumberDetail": "Tesisatçı Detayı",
         "plumberList": "Tesisatçı Listesi"
+    },
+    "work": {
+        "newWork": "Yeni İş",
+        "editWork": "İş Düzenle",
+        "workList": "İş Listesi",
+        "workDetail": "İş Detayı"
     }
 }
