feat: integrate toastification for user notifications and add calendar icon; update localization and improve work creation flow

--- a/assets/localization/tr.json
+++ b/assets/localization/tr.json
@@ -29,7 +29,8 @@
         "search": "Ara",
         "noData": "Veri bulunamadı",
         "loading": "Yükleniyor...",
-        "error": "Bir hata oluştu"
+        "error": "Bir hata oluştu",
+        "pickLater": "Daha sonra seç"
     },
     "customer": {
         "name": "Ad",
@@ -56,7 +57,8 @@
         "editPlumber": "Tesisatçı Düzenle",
         "deletePlumber": "Tesisatçı Sil",
         "plumberDetail": "Tesisatçı Detayı",
-        "plumberList": "Tesisatçı Listesi"
+        "plumberList": "Tesisatçı Listesi",
+        "pickPlumber": "Tesisatçı Seç"
     },
     "work": {
         "newWork": "Yeni İş",
