feat: add waiting user list feature and localization updates; enhance plumber service with user type filtering

--- a/assets/localization/tr.json
+++ b/assets/localization/tr.json
@@ -35,7 +35,8 @@
         "pickLater": "Daha sonra seç",
         "yes": "Evet",
         "no": "Hayır",
-        "welcome": "Hoşgeldin {}"
+        "welcome": "Hoşgeldin {}",
+        "confirm": "Onayla"
     },
     "customer": {
         "name": "Ad",
