feat: update localization for customer and enhance navigation; adjust Firestore list view and routing methods

--- a/assets/localization/tr.json
+++ b/assets/localization/tr.json
@@ -50,7 +50,8 @@
         "deleteCustomer": "Müşteri Sil",
         "customerDetail": "Müşteri Detayı",
         "customerList": "Müşteri Listesi",
-        "customerAdded": "Müşteri eklendi"
+        "customerAdded": "Müşteri eklendi",
+        "customerPick": "Müşteri Seç"
     },
     "plumber": {
         "name": "Ad",
