feat: enhance plumber confirmation process and add localization for added plumber message; refactor waiting user list into plumber create view

--- a/assets/localization/tr.json
+++ b/assets/localization/tr.json
@@ -65,7 +65,8 @@
         "deletePlumber": "Tesisatçı Sil",
         "plumberDetail": "Tesisatçı Detayı",
         "plumberList": "Tesisatçı Listesi",
-        "pickPlumber": "Tesisatçı Seç"
+        "pickPlumber": "Tesisatçı Seç",
+        "plumberAdded": "Tesisatçı eklendi"
     },
     "work": {
         "newWork": "Yeni İş",
