--- a/assets/localization/tr.json
+++ b/assets/localization/tr.json
@@ -66,7 +66,8 @@
         "plumberDetail": "Tesisatçı Detayı",
         "plumberList": "Tesisatçı Listesi",
         "pickPlumber": "Tesisatçı Seç",
-        "plumberAdded": "Tesisatçı eklendi"
+        "plumberAdded": "Tesisatçı eklendi",
+        "plumberNotChoosen": "Tesisatçı atanmadı"
     },
     "work": {
         "newWork": "Yeni İş",
