feat: add service type selector and integrate it into work creation view; update localization and theme

--- a/assets/localization/tr.json
+++ b/assets/localization/tr.json
@@ -75,7 +75,8 @@
         "workList": "İş Listesi",
         "workDetail": "İş Detayı",
         "workAdded": "İş eklendi",
-        "workDate": "İş Tarihi"
+        "workDate": "İş Tarihi",
+        "price": "Ücret"
     },
     "workType": {
         "workType": "İş Türü",
