feat: refactor work detail components; update localization for service price and add work cart items to work model

--- a/assets/localization/tr.json
+++ b/assets/localization/tr.json
@@ -74,9 +74,14 @@
         "editWork": "İş Düzenle",
         "workList": "İş Listesi",
         "workDetail": "İş Detayı",
-        "workAdded": "İş eklendi",
+        "workAdded": "İş Eklendi",
         "workDate": "İş Tarihi",
-        "price": "Ücret"
+        "price": "Ücret",
+        "servicePrice": "Servis Ücreti",
+        "count": "Adet",
+        "totalPrice": "Toplam Ücret",
+        "workCreated": "İş oluşturuldu",
+        "oldWorks": "Geçmiş İşler"
     },
     "workType": {
         "workType": "İş Türü",
