feat: add description localization and comment functionality to work detail; update icons and refactor action handlers

--- a/assets/localization/tr.json
+++ b/assets/localization/tr.json
@@ -45,7 +45,8 @@
         "no": "Hayır",
         "welcome": "Hoşgeldin {}",
         "confirm": "Onayla",
-        "otherValue": "Diğer"
+        "otherValue": "Diğer",
+        "description": "Açıklama"
     },
     "customer": {
         "name": "Ad",
