feat: enhance localization with new keys for total and details; refactor loading widget to use custom implementation; update work comment handling and improve work detail view structure

--- a/assets/localization/tr.json
+++ b/assets/localization/tr.json
@@ -46,7 +46,9 @@
         "welcome": "Hoşgeldin {}",
         "confirm": "Onayla",
         "otherValue": "Diğer",
-        "description": "Açıklama"
+        "description": "Açıklama",
+        "total": "Toplam",
+        "details": "Detaylar"
     },
     "customer": {
         "name": "Ad",
