feat: update models to support JSON serialization; add new localization keys for work status; enhance work and customer handling in services and mixins

--- a/assets/localization/tr.json
+++ b/assets/localization/tr.json
@@ -115,5 +115,10 @@
         "service": "Servis",
         "rework": "Geri Dönüş",
         "extra": "Ek Ücret"
+    },
+    "workStatus": {
+        "pending": "Beklemede",
+        "completed": "Tamamlandı",
+        "cancelled": "İptal Edildi"
     }
 }
