feat: add localization for work price offer; integrate price offers collection in Firestore and update work detail mixin to show price details

--- a/assets/localization/tr.json
+++ b/assets/localization/tr.json
@@ -120,5 +120,10 @@
         "pending": "Beklemede",
         "completed": "Tamamlandı",
         "cancelled": "İptal Edildi"
+    },
+    "workPriceOffer": {
+        "title": "Fiyat Teklifi",
+        "description": "Teklif vermek istediğiniz ücreti giriniz",
+        "price": "Ücret"
     }
 }
