feat: update localization for work price offer with new key; implement price offer dialog in work detail mixin and remove unused alert component

--- a/assets/localization/tr.json
+++ b/assets/localization/tr.json
@@ -125,7 +125,8 @@
     "workPriceOffer": {
         "title": "Fiyat Teklifi",
         "description": "Teklif vermek istediğiniz ücreti giriniz",
-        "price": "Ücret"
+        "price": "Ücret",
+        "priceOffered": "Teklif Verildi"
     },
     "price": {
         "newPrice": "Yeni Fiyat Kalemi",
