feat: enhance price offer creation with new localization key for item count; update cart management logic to calculate total based on item count; improve UI components for better display of work cart items

--- a/assets/localization/tr.json
+++ b/assets/localization/tr.json
@@ -126,7 +126,8 @@
         "title": "Fiyat Teklifi",
         "description": "Teklif vermek istediğiniz ücreti giriniz",
         "price": "Ücret",
-        "priceOffered": "Teklif Verildi"
+        "priceOffered": "Teklif Verildi",
+        "count": "Adet"
     },
     "price": {
         "newPrice": "Yeni Fiyat Kalemi",
