feat: add user type localization support in Turkish; update localization keys and enums for user types, and modify MainDrawer to include user profile widget

--- a/assets/localization/tr.json
+++ b/assets/localization/tr.json
@@ -117,6 +117,12 @@
         "rework": "Geri Dönüş",
         "extra": "Ek Ücret"
     },
+    "userType": {
+        "admin": "Yönetici",
+        "personal": "Personel",
+        "waiting": "Onay Bekliyor",
+        "none": "Kullanıcı"
+    },
     "workStatus": {
         "pending": "Beklemede",
         "completed": "Tamamlandı",
