feat: enhance localization by adding welcome messages in English and Turkish, update language toggle subtitles for clarity, and refactor login view layout for improved user experience

--- a/assets/localization/en.json
+++ b/assets/localization/en.json
@@ -16,7 +16,8 @@
         "forgotPassword": "Forgot Password",
         "register": "Register",
         "nameSurname": "Name Surname",
-        "waitingForConfirmation": "Your account is waiting for confirmation"
+        "waitingForConfirmation": "Your account is waiting for confirmation",
+        "welcome": "Welcome to Piksel Plumbing"
     },
     "validators": {
         "required": "This field is required",
