feat: enhance localization by adding new keys for total works, customers count, and this month in both English and Turkish; refactor statistics display in the drawer profile for improved clarity

--- a/assets/localization/tr.json
+++ b/assets/localization/tr.json
@@ -7,7 +7,10 @@
         "works": "İşler",
         "reports": "Raporlar",
         "prices": "Fiyatlar",
-        "logout": "Çıkış"
+        "logout": "Çıkış",
+        "totalWorks": "Toplam İş",
+        "customersCount": "Müşteriler",
+        "thisMonth": "Bu Ay"
     },
     "login": {
         "login": "Giriş Yap",
