--- a/assets/localization/en.json
+++ b/assets/localization/en.json
@@ -7,7 +7,10 @@
         "works": "Works",
         "reports": "Reports",
         "prices": "Prices",
-        "logout": "Logout"
+        "logout": "Logout",
+        "totalWorks": "Total Works",
+        "customersCount": "Customers",
+        "thisMonth": "This Month"
     },
     "login": {
         "login": "Login",
